﻿Read structures with a tolerant reader so blocks missing in 1.20.1 do not kill the blueprint
Reported symptom: the 1.20.1 build always said "the structure file does not exist", and later also lost the
preview.

Root causes, in order:

1. Vanilla's NbtUtils#readBlockState resolves palette entries with HolderGetter#getOrThrow, so a single block
   id that does not exist in this version makes StructureTemplateManager#loadFromResource throw.  The
   exception is swallowed and only logged, the template comes back empty, and the mod reports a missing
   structure file.  The built-in cottage references minecraft:short_grass (renamed in 1.20.3) plus blocks
   from five optional mods, so it never loaded here at all.

2. The tolerant reader added for that then crashed on List.copyOf(blockEntities): List.copyOf rejects null
   elements and every block without block entity data contributes a null.  That NPE made both the preview and
   the build fail.

The mod now reads structure files itself: unknown blocks become air (the id is reported once, and
minecraft:short_grass maps back to minecraft:grass), block entity data is carried along, and the blocks are
placed straight from that list - so the ghost preview and the placed result are guaranteed to be the same
list.  Air entries are kept, which preserves vanilla's behaviour of clearing the space a structure occupies.

Verified on a dedicated server: the cottage loads as 2772 entries (1127 solid, 1645 air, 61 with block entity
data), places correctly, and reports the 13 unknown blocks from the optional mods.